parserNuevecito.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | _GENERIC_selection

    6 constant: INTEGER_CONSTANT
    7         | FLOATING_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 _GENERIC_selection: _GENERIC '(' assignment_expression ',' _GENERIC_assoc_list ')'

   13 _GENERIC_assoc_list: _GENERIC_association
   14                    | _GENERIC_assoc_list ',' _GENERIC_association

   15 _GENERIC_association: type_name ':' assignment_expression
   16                     | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | _ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression
   51                    | error '+' multiplicative_expression

   52 shift_expression: additive_expression
   53                 | shift_expression LEFT_OP additive_expression
   54                 | shift_expression RIGHT_OP additive_expression

   55 relational_expression: shift_expression
   56                      | relational_expression '<' shift_expression
   57                      | relational_expression '>' shift_expression
   58                      | relational_expression LE_OP shift_expression
   59                      | relational_expression GE_OP shift_expression

   60 equality_expression: relational_expression
   61                    | equality_expression EQ_OP relational_expression
   62                    | equality_expression NE_OP relational_expression

   63 and_expression: equality_expression
   64               | and_expression '&' equality_expression

   65 exclusive_or_expression: and_expression
   66                        | exclusive_or_expression '^' and_expression

   67 inclusive_or_expression: exclusive_or_expression
   68                        | inclusive_or_expression '|' exclusive_or_expression

   69 logical_and_expression: inclusive_or_expression
   70                       | logical_and_expression AND_OP inclusive_or_expression

   71 logical_or_expression: logical_and_expression
   72                      | logical_or_expression OR_OP logical_and_expression

   73 conditional_expression: logical_or_expression
   74                       | logical_or_expression '?' expression ':' conditional_expression

   75 assignment_expression: conditional_expression
   76                      | unary_expression assignment_operator assignment_expression

   77 assignment_operator: '='
   78                    | MUL_ASSIGN
   79                    | DIV_ASSIGN
   80                    | MOD_ASSIGN
   81                    | ADD_ASSIGN
   82                    | SUB_ASSIGN
   83                    | LEFT_ASSIGN
   84                    | RIGHT_ASSIGN
   85                    | AND_ASSIGN
   86                    | XOR_ASSIGN
   87                    | OR_ASSIGN

   88 expression: assignment_expression
   89           | expression ',' assignment_expression

   90 constant_expression: conditional_expression

   91 declaration: declaration_specifiers ';'
   92            | declaration_specifiers init_declarator_list ';'
   93            | _STATIC_ASSERT_declaration

   94 declaration_specifiers: storage_class_specifier declaration_specifiers
   95                       | storage_class_specifier
   96                       | type_specifier declaration_specifiers
   97                       | type_specifier
   98                       | type_qualifier declaration_specifiers
   99                       | type_qualifier
  100                       | function_specifier declaration_specifiers
  101                       | function_specifier
  102                       | alignment_specifier declaration_specifiers
  103                       | alignment_specifier

  104 init_declarator_list: init_declarator
  105                     | init_declarator_list ',' init_declarator

  106 init_declarator: declarator '=' initializer
  107                | declarator

  108 storage_class_specifier: TYPEDEF
  109                        | EXTERN
  110                        | STATIC
  111                        | _THREAD_LOCAL
  112                        | AUTO
  113                        | REGISTER

  114 type_specifier: VOID
  115               | CHAR
  116               | SHORT
  117               | INT
  118               | LONG
  119               | FLOAT
  120               | DOUBLE
  121               | SIGNED
  122               | UNSIGNED
  123               | _BOOL
  124               | _COMPLEX
  125               | _IMAGINARY
  126               | struct_or_union_specifier
  127               | enum_specifier
  128               | TYPEDEF_NAME

  129 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  130                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER

  132 struct_or_union: STRUCT
  133                | UNION

  134 struct_declaration_list: struct_declaration
  135                        | struct_declaration_list struct_declaration

  136 struct_declaration: specifier_qualifier_list ';'
  137                   | specifier_qualifier_list struct_declarator_list ';'
  138                   | _STATIC_ASSERT_declaration

  139 specifier_qualifier_list: type_specifier specifier_qualifier_list
  140                         | type_specifier
  141                         | type_qualifier specifier_qualifier_list
  142                         | type_qualifier

  143 struct_declarator_list: struct_declarator
  144                       | struct_declarator_list ',' struct_declarator

  145 struct_declarator: ':' constant_expression
  146                  | declarator ':' constant_expression
  147                  | declarator

  148 enum_specifier: ENUM '{' enumerator_list '}'
  149               | ENUM '{' enumerator_list ',' '}'
  150               | ENUM IDENTIFIER '{' enumerator_list '}'
  151               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM IDENTIFIER

  153 enumerator_list: enumerator
  154                | enumerator_list ',' enumerator

  155 enumerator: enumeration_constant '=' constant_expression
  156           | enumeration_constant

  157 type_qualifier: CONST
  158               | RESTRICT
  159               | VOLATILE
  160               | _ATOMIC

  161 function_specifier: INLINE
  162                   | _NORETURN

  163 alignment_specifier: _ALIGNAS '(' type_name ')'
  164                    | _ALIGNAS '(' constant_expression ')'

  165 declarator: pointer direct_declarator
  166           | direct_declarator

  167 direct_declarator: IDENTIFIER
  168                  | '(' declarator ')'
  169                  | direct_declarator '[' ']'
  170                  | direct_declarator '[' '*' ']'
  171                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  172                  | direct_declarator '[' STATIC assignment_expression ']'
  173                  | direct_declarator '[' type_qualifier_list '*' ']'
  174                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  175                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list ']'
  177                  | direct_declarator '[' assignment_expression ']'
  178                  | direct_declarator '(' parameter_type_list ')'
  179                  | direct_declarator '(' ')'
  180                  | direct_declarator '(' identifier_list ')'

  181 pointer: '*' type_qualifier_list pointer
  182        | '*' type_qualifier_list
  183        | '*' pointer
  184        | '*'

  185 type_qualifier_list: type_qualifier
  186                    | type_qualifier_list type_qualifier

  187 parameter_type_list: parameter_list ',' ELLIPSIS
  188                    | parameter_list

  189 parameter_list: parameter_declaration
  190               | parameter_list ',' parameter_declaration

  191 parameter_declaration: declaration_specifiers declarator
  192                      | declaration_specifiers abstract_declarator
  193                      | declaration_specifiers

  194 identifier_list: IDENTIFIER
  195                | identifier_list ',' IDENTIFIER

  196 type_name: specifier_qualifier_list abstract_declarator
  197          | specifier_qualifier_list

  198 abstract_declarator: pointer direct_abstract_declarator
  199                    | pointer
  200                    | direct_abstract_declarator

  201 direct_abstract_declarator: '(' abstract_declarator ')'
  202                           | '[' ']'
  203                           | '[' '*' ']'
  204                           | '[' STATIC type_qualifier_list assignment_expression ']'
  205                           | '[' STATIC assignment_expression ']'
  206                           | '[' type_qualifier_list STATIC assignment_expression ']'
  207                           | '[' type_qualifier_list assignment_expression ']'
  208                           | '[' type_qualifier_list ']'
  209                           | '[' assignment_expression ']'
  210                           | direct_abstract_declarator '[' ']'
  211                           | direct_abstract_declarator '[' '*' ']'
  212                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  213                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  214                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  215                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  216                           | direct_abstract_declarator '[' type_qualifier_list ']'
  217                           | direct_abstract_declarator '[' assignment_expression ']'
  218                           | '(' ')'
  219                           | '(' parameter_type_list ')'
  220                           | direct_abstract_declarator '(' ')'
  221                           | direct_abstract_declarator '(' parameter_type_list ')'

  222 initializer: '{' initializer_list '}'
  223            | '{' initializer_list ',' '}'
  224            | assignment_expression

  225 initializer_list: designation initializer
  226                 | initializer
  227                 | initializer_list ',' designation initializer
  228                 | initializer_list ',' initializer

  229 designation: designator_list '='

  230 designator_list: designator
  231                | designator_list designator

  232 designator: '[' constant_expression ']'
  233           | '.' IDENTIFIER

  234 _STATIC_ASSERT_declaration: _STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  235 statement: labeled_statement
  236          | compound_statement
  237          | expression_statement
  238          | selection_statement
  239          | iteration_statement
  240          | jump_statement

  241 labeled_statement: IDENTIFIER ':' statement
  242                  | CASE constant_expression ':' statement
  243                  | DEFAULT ':' statement

  244 compound_statement: '{' '}'
  245                   | '{' block_item_list '}'

  246 block_item_list: block_item
  247                | block_item_list block_item

  248 block_item: declaration
  249           | statement

  250 expression_statement: ';'
  251                     | expression ';'
  252                     | error ';'

  253 selection_statement: IF '(' expression ')' statement ELSE statement
  254                    | IF '(' expression ')' statement
  255                    | SWITCH '(' expression ')' statement

  256 iteration_statement: WHILE '(' expression ')' statement
  257                    | DO statement WHILE '(' expression ')' ';'
  258                    | FOR '(' expression_statement expression_statement ')' statement
  259                    | FOR '(' expression_statement expression_statement expression ')' statement
  260                    | FOR '(' declaration expression_statement ')' statement
  261                    | FOR '(' declaration expression_statement expression ')' statement

  262 jump_statement: GOTO IDENTIFIER ';'
  263               | CONTINUE ';'
  264               | BREAK ';'
  265               | RETURN ';'
  266               | RETURN expression ';'

  267 translation_unit: external_declaration
  268                 | translation_unit external_declaration

  269 external_declaration: function_definition
  270                     | declaration

  271 function_definition: declaration_specifiers declarator declaration_list compound_statement
  272                    | declaration_specifiers declarator compound_statement

  273 declaration_list: declaration
  274                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 41
    '%' (37) 47
    '&' (38) 36 64
    '(' (40) 4 12 19 20 25 26 34 35 43 163 164 168 178 179 180 201 218 219 220 221 234 253 254 255 256 257 258 259 260 261
    ')' (41) 4 12 19 20 25 26 34 35 43 163 164 168 178 179 180 201 218 219 220 221 234 253 254 255 256 257 258 259 260 261
    '*' (42) 37 45 170 173 181 182 183 184 203 211
    '+' (43) 38 49 51
    ',' (44) 12 14 26 28 89 105 144 149 151 154 187 190 195 223 227 228 234
    '-' (45) 39 50
    '.' (46) 21 233
    '/' (47) 46
    ':' (58) 15 16 74 145 146 241 242 243
    ';' (59) 91 92 136 137 234 250 251 252 257 262 263 264 265 266
    '<' (60) 56
    '=' (61) 77 106 155 229
    '>' (62) 57
    '?' (63) 74
    '[' (91) 18 169 170 171 172 173 174 175 176 177 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 232
    ']' (93) 18 169 170 171 172 173 174 175 176 177 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 232
    '^' (94) 66
    '{' (123) 25 26 129 130 148 149 150 151 222 223 244 245
    '|' (124) 68
    '}' (125) 25 26 129 130 148 149 150 151 222 223 244 245
    '~' (126) 40
    error (256) 51 252
    IDENTIFIER (258) 1 9 21 22 130 131 150 151 152 167 194 195 233 241 262
    INTEGER_CONSTANT (259) 6
    FLOATING_CONSTANT (260) 7
    STRING_LITERAL (261) 10 234
    FUNC_NAME (262) 11
    SIZEOF (263) 33 34
    PTR_OP (264) 22
    INC_OP (265) 23 30
    DEC_OP (266) 24 31
    LEFT_OP (267) 53
    RIGHT_OP (268) 54
    LE_OP (269) 58
    GE_OP (270) 59
    EQ_OP (271) 61
    NE_OP (272) 62
    AND_OP (273) 70
    OR_OP (274) 72
    MUL_ASSIGN (275) 78
    DIV_ASSIGN (276) 79
    MOD_ASSIGN (277) 80
    ADD_ASSIGN (278) 81
    SUB_ASSIGN (279) 82
    LEFT_ASSIGN (280) 83
    RIGHT_ASSIGN (281) 84
    AND_ASSIGN (282) 85
    XOR_ASSIGN (283) 86
    OR_ASSIGN (284) 87
    TYPEDEF_NAME (285) 128
    ENUMERATION_CONSTANT (286) 8
    TYPEDEF (287) 108
    EXTERN (288) 109
    STATIC (289) 110 171 172 174 204 205 206 212 213 215
    AUTO (290) 112
    REGISTER (291) 113
    INLINE (292) 161
    CONST (293) 157
    RESTRICT (294) 158
    VOLATILE (295) 159
    _BOOL (296) 123
    CHAR (297) 115
    SHORT (298) 116
    INT (299) 117
    LONG (300) 118
    SIGNED (301) 121
    UNSIGNED (302) 122
    FLOAT (303) 119
    DOUBLE (304) 120
    VOID (305) 114
    _COMPLEX (306) 124
    _IMAGINARY (307) 125
    STRUCT (308) 132
    UNION (309) 133
    ENUM (310) 148 149 150 151 152
    ELLIPSIS (311) 187
    CASE (312) 242
    DEFAULT (313) 16 243
    IF (314) 253 254
    ELSE (315) 253
    SWITCH (316) 255
    WHILE (317) 256 257
    DO (318) 257
    FOR (319) 258 259 260 261
    GOTO (320) 262
    CONTINUE (321) 263
    BREAK (322) 264
    RETURN (323) 265 266
    _ALIGNAS (324) 163 164
    _ALIGNOF (325) 35
    _ATOMIC (326) 160
    _GENERIC (327) 12
    _NORETURN (328) 162
    _STATIC_ASSERT (329) 234
    _THREAD_LOCAL (330) 111
    "then" (331)


Nonterminals, with rules where they appear

    $accept (101)
        on left: 0
    primary_expression (102)
        on left: 1 2 3 4 5
        on right: 17
    constant (103)
        on left: 6 7 8
        on right: 2
    enumeration_constant (104)
        on left: 9
        on right: 155 156
    string (105)
        on left: 10 11
        on right: 3
    _GENERIC_selection (106)
        on left: 12
        on right: 5
    _GENERIC_assoc_list (107)
        on left: 13 14
        on right: 12 14
    _GENERIC_association (108)
        on left: 15 16
        on right: 13 14
    postfix_expression (109)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 18 19 20 21 22 23 24 29
    argument_expression_list (110)
        on left: 27 28
        on right: 20 28
    unary_expression (111)
        on left: 29 30 31 32 33 34 35
        on right: 30 31 33 42 76
    unary_operator (112)
        on left: 36 37 38 39 40 41
        on right: 32
    cast_expression (113)
        on left: 42 43
        on right: 32 43 44 45 46 47
    multiplicative_expression (114)
        on left: 44 45 46 47
        on right: 45 46 47 48 49 50 51
    additive_expression (115)
        on left: 48 49 50 51
        on right: 49 50 52 53 54
    shift_expression (116)
        on left: 52 53 54
        on right: 53 54 55 56 57 58 59
    relational_expression (117)
        on left: 55 56 57 58 59
        on right: 56 57 58 59 60 61 62
    equality_expression (118)
        on left: 60 61 62
        on right: 61 62 63 64
    and_expression (119)
        on left: 63 64
        on right: 64 65 66
    exclusive_or_expression (120)
        on left: 65 66
        on right: 66 67 68
    inclusive_or_expression (121)
        on left: 67 68
        on right: 68 69 70
    logical_and_expression (122)
        on left: 69 70
        on right: 70 71 72
    logical_or_expression (123)
        on left: 71 72
        on right: 72 73 74
    conditional_expression (124)
        on left: 73 74
        on right: 74 75 90
    assignment_expression (125)
        on left: 75 76
        on right: 12 15 16 27 28 76 88 89 171 172 174 175 177 204 205 206 207 209 212 213 214 215 217 224
    assignment_operator (126)
        on left: 77 78 79 80 81 82 83 84 85 86 87
        on right: 76
    expression (127)
        on left: 88 89
        on right: 4 18 74 89 251 253 254 255 256 257 259 261 266
    constant_expression (128)
        on left: 90
        on right: 145 146 155 164 232 234 242
    declaration (129)
        on left: 91 92 93
        on right: 248 260 261 270 273 274
    declaration_specifiers (130)
        on left: 94 95 96 97 98 99 100 101 102 103
        on right: 91 92 94 96 98 100 102 191 192 193 271 272
    init_declarator_list (131)
        on left: 104 105
        on right: 92 105
    init_declarator (132)
        on left: 106 107
        on right: 104 105
    storage_class_specifier (133)
        on left: 108 109 110 111 112 113
        on right: 94 95
    type_specifier (134)
        on left: 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
        on right: 96 97 139 140
    struct_or_union_specifier (135)
        on left: 129 130 131
        on right: 126
    struct_or_union (136)
        on left: 132 133
        on right: 129 130 131
    struct_declaration_list (137)
        on left: 134 135
        on right: 129 130 135
    struct_declaration (138)
        on left: 136 137 138
        on right: 134 135
    specifier_qualifier_list (139)
        on left: 139 140 141 142
        on right: 136 137 139 141 196 197
    struct_declarator_list (140)
        on left: 143 144
        on right: 137 144
    struct_declarator (141)
        on left: 145 146 147
        on right: 143 144
    enum_specifier (142)
        on left: 148 149 150 151 152
        on right: 127
    enumerator_list (143)
        on left: 153 154
        on right: 148 149 150 151 154
    enumerator (144)
        on left: 155 156
        on right: 153 154
    type_qualifier (145)
        on left: 157 158 159 160
        on right: 98 99 141 142 185 186
    function_specifier (146)
        on left: 161 162
        on right: 100 101
    alignment_specifier (147)
        on left: 163 164
        on right: 102 103
    declarator (148)
        on left: 165 166
        on right: 106 107 146 147 168 191 271 272
    direct_declarator (149)
        on left: 167 168 169 170 171 172 173 174 175 176 177 178 179 180
        on right: 165 166 169 170 171 172 173 174 175 176 177 178 179 180
    pointer (150)
        on left: 181 182 183 184
        on right: 165 181 183 198 199
    type_qualifier_list (151)
        on left: 185 186
        on right: 171 173 174 175 176 181 182 186 204 206 207 208 212 214 215 216
    parameter_type_list (152)
        on left: 187 188
        on right: 178 219 221
    parameter_list (153)
        on left: 189 190
        on right: 187 188 190
    parameter_declaration (154)
        on left: 191 192 193
        on right: 189 190
    identifier_list (155)
        on left: 194 195
        on right: 180 195
    type_name (156)
        on left: 196 197
        on right: 15 25 26 34 35 43 163
    abstract_declarator (157)
        on left: 198 199 200
        on right: 192 196 201
    direct_abstract_declarator (158)
        on left: 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221
        on right: 198 200 210 211 212 213 214 215 216 217 220 221
    initializer (159)
        on left: 222 223 224
        on right: 106 225 226 227 228
    initializer_list (160)
        on left: 225 226 227 228
        on right: 25 26 222 223 227 228
    designation (161)
        on left: 229
        on right: 225 227
    designator_list (162)
        on left: 230 231
        on right: 229 231
    designator (163)
        on left: 232 233
        on right: 230 231
    _STATIC_ASSERT_declaration (164)
        on left: 234
        on right: 93 138
    statement (165)
        on left: 235 236 237 238 239 240
        on right: 241 242 243 249 253 254 255 256 257 258 259 260 261
    labeled_statement (166)
        on left: 241 242 243
        on right: 235
    compound_statement (167)
        on left: 244 245
        on right: 236 271 272
    block_item_list (168)
        on left: 246 247
        on right: 245 247
    block_item (169)
        on left: 248 249
        on right: 246 247
    expression_statement (170)
        on left: 250 251 252
        on right: 237 258 259 260 261
    selection_statement (171)
        on left: 253 254 255
        on right: 238
    iteration_statement (172)
        on left: 256 257 258 259 260 261
        on right: 239
    jump_statement (173)
        on left: 262 263 264 265 266
        on right: 240
    translation_unit (174)
        on left: 267 268
        on right: 0 268
    external_declaration (175)
        on left: 269 270
        on right: 267 268
    function_definition (176)
        on left: 271 272
        on right: 269
    declaration_list (177)
        on left: 273 274
        on right: 271 274


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME    shift, and go to state 1
    TYPEDEF         shift, and go to state 2
    EXTERN          shift, and go to state 3
    STATIC          shift, and go to state 4
    AUTO            shift, and go to state 5
    REGISTER        shift, and go to state 6
    INLINE          shift, and go to state 7
    CONST           shift, and go to state 8
    RESTRICT        shift, and go to state 9
    VOLATILE        shift, and go to state 10
    _BOOL           shift, and go to state 11
    CHAR            shift, and go to state 12
    SHORT           shift, and go to state 13
    INT             shift, and go to state 14
    LONG            shift, and go to state 15
    SIGNED          shift, and go to state 16
    UNSIGNED        shift, and go to state 17
    FLOAT           shift, and go to state 18
    DOUBLE          shift, and go to state 19
    VOID            shift, and go to state 20
    _COMPLEX        shift, and go to state 21
    _IMAGINARY      shift, and go to state 22
    STRUCT          shift, and go to state 23
    UNION           shift, and go to state 24
    ENUM            shift, and go to state 25
    _ALIGNAS        shift, and go to state 26
    _ATOMIC         shift, and go to state 27
    _NORETURN       shift, and go to state 28
    _STATIC_ASSERT  shift, and go to state 29
    _THREAD_LOCAL   shift, and go to state 30

    declaration                 go to state 31
    declaration_specifiers      go to state 32
    storage_class_specifier     go to state 33
    type_specifier              go to state 34
    struct_or_union_specifier   go to state 35
    struct_or_union             go to state 36
    enum_specifier              go to state 37
    type_qualifier              go to state 38
    function_specifier          go to state 39
    alignment_specifier         go to state 40
    _STATIC_ASSERT_declaration  go to state 41
    translation_unit            go to state 42
    external_declaration        go to state 43
    function_definition         go to state 44


State 1

  128 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 128 (type_specifier)


State 2

  108 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 108 (storage_class_specifier)


State 3

  109 storage_class_specifier: EXTERN •

    $default  reduce using rule 109 (storage_class_specifier)


State 4

  110 storage_class_specifier: STATIC •

    $default  reduce using rule 110 (storage_class_specifier)


State 5

  112 storage_class_specifier: AUTO •

    $default  reduce using rule 112 (storage_class_specifier)


State 6

  113 storage_class_specifier: REGISTER •

    $default  reduce using rule 113 (storage_class_specifier)


State 7

  161 function_specifier: INLINE •

    $default  reduce using rule 161 (function_specifier)


State 8

  157 type_qualifier: CONST •

    $default  reduce using rule 157 (type_qualifier)


State 9

  158 type_qualifier: RESTRICT •

    $default  reduce using rule 158 (type_qualifier)


State 10

  159 type_qualifier: VOLATILE •

    $default  reduce using rule 159 (type_qualifier)


State 11

  123 type_specifier: _BOOL •

    $default  reduce using rule 123 (type_specifier)


State 12

  115 type_specifier: CHAR •

    $default  reduce using rule 115 (type_specifier)


State 13

  116 type_specifier: SHORT •

    $default  reduce using rule 116 (type_specifier)


State 14

  117 type_specifier: INT •

    $default  reduce using rule 117 (type_specifier)


State 15

  118 type_specifier: LONG •

    $default  reduce using rule 118 (type_specifier)


State 16

  121 type_specifier: SIGNED •

    $default  reduce using rule 121 (type_specifier)


State 17

  122 type_specifier: UNSIGNED •

    $default  reduce using rule 122 (type_specifier)


State 18

  119 type_specifier: FLOAT •

    $default  reduce using rule 119 (type_specifier)


State 19

  120 type_specifier: DOUBLE •

    $default  reduce using rule 120 (type_specifier)


State 20

  114 type_specifier: VOID •

    $default  reduce using rule 114 (type_specifier)


State 21

  124 type_specifier: _COMPLEX •

    $default  reduce using rule 124 (type_specifier)


State 22

  125 type_specifier: _IMAGINARY •

    $default  reduce using rule 125 (type_specifier)


State 23

  132 struct_or_union: STRUCT •

    $default  reduce using rule 132 (struct_or_union)


State 24

  133 struct_or_union: UNION •

    $default  reduce using rule 133 (struct_or_union)


State 25

  148 enum_specifier: ENUM • '{' enumerator_list '}'
  149               | ENUM • '{' enumerator_list ',' '}'
  150               | ENUM • IDENTIFIER '{' enumerator_list '}'
  151               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 45
    '{'         shift, and go to state 46


State 26

  163 alignment_specifier: _ALIGNAS • '(' type_name ')'
  164                    | _ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 47


State 27

  160 type_qualifier: _ATOMIC •

    $default  reduce using rule 160 (type_qualifier)


State 28

  162 function_specifier: _NORETURN •

    $default  reduce using rule 162 (function_specifier)


State 29

  234 _STATIC_ASSERT_declaration: _STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 48


State 30

  111 storage_class_specifier: _THREAD_LOCAL •

    $default  reduce using rule 111 (storage_class_specifier)


State 31

  270 external_declaration: declaration •

    $default  reduce using rule 270 (external_declaration)


State 32

   91 declaration: declaration_specifiers • ';'
   92            | declaration_specifiers • init_declarator_list ';'
  271 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  272                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 49
    '('         shift, and go to state 50
    '*'         shift, and go to state 51
    ';'         shift, and go to state 52

    init_declarator_list  go to state 53
    init_declarator       go to state 54
    declarator            go to state 55
    direct_declarator     go to state 56
    pointer               go to state 57


State 33

   94 declaration_specifiers: storage_class_specifier • declaration_specifiers
   95                       | storage_class_specifier •

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    _BOOL          shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    _COMPLEX       shift, and go to state 21
    _IMAGINARY     shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    _ALIGNAS       shift, and go to state 26
    _ATOMIC        shift, and go to state 27
    _NORETURN      shift, and go to state 28
    _THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 95 (declaration_specifiers)

    declaration_specifiers     go to state 58
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    type_qualifier             go to state 38
    function_specifier         go to state 39
    alignment_specifier        go to state 40


State 34

   96 declaration_specifiers: type_specifier • declaration_specifiers
   97                       | type_specifier •

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    _BOOL          shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    _COMPLEX       shift, and go to state 21
    _IMAGINARY     shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    _ALIGNAS       shift, and go to state 26
    _ATOMIC        shift, and go to state 27
    _NORETURN      shift, and go to state 28
    _THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 97 (declaration_specifiers)

    declaration_specifiers     go to state 59
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    type_qualifier             go to state 38
    function_specifier         go to state 39
    alignment_specifier        go to state 40


State 35

  126 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 126 (type_specifier)


State 36

  129 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  130                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 60
    '{'         shift, and go to state 61


State 37

  127 type_specifier: enum_specifier •

    $default  reduce using rule 127 (type_specifier)


State 38

   98 declaration_specifiers: type_qualifier • declaration_specifiers
   99                       | type_qualifier •

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    _BOOL          shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    _COMPLEX       shift, and go to state 21
    _IMAGINARY     shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    _ALIGNAS       shift, and go to state 26
    _ATOMIC        shift, and go to state 27
    _NORETURN      shift, and go to state 28
    _THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 99 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    type_qualifier             go to state 38
    function_specifier         go to state 39
    alignment_specifier        go to state 40


State 39

  100 declaration_specifiers: function_specifier • declaration_specifiers
  101                       | function_specifier •
